# RT-AEP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  main.cpp
docs/: GUI_README.md
gui/: CMakeLists.txt  GUIManager.cpp  GUIManager.hpp
include/: AudioEngine.hpp
include/effects/: AudioEffect.hpp  DistortionEffect.hpp  EchoEffect.hpp  EffectChain.hpp  GainEffect.hpp  PitchShifterEffect.hpp  ReverbEffect.hpp
src/: AudioEngine.cpp  CMakeLists.txt
src/effects/: DistortionEffect.cpp  EchoEffect.cpp  EffectChain.cpp  GainEffect.cpp  PitchShifterEffect.cpp  ReverbEffect.cpp
visualization/: README.md  Visualizer.cpp  Visualizer.hpp
